# model_generic_response.go
@@ -1,0 +1,198 @@
+/*
+WhatsApp API MultiDevice
+
+This API is used for sending whatsapp via API
+
+API version: 3.3.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the GenericResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &GenericResponse{}
+
+// GenericResponse struct for GenericResponse
+type GenericResponse struct {
+	Code *int32 `json:"code,omitempty"`
+	Message *string `json:"message,omitempty"`
+	Results *string `json:"results,omitempty"`
+}
+
+// NewGenericResponse instantiates a new GenericResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewGenericResponse() *GenericResponse {
+	this := GenericResponse{}
+	return &this
+}
+
+// NewGenericResponseWithDefaults instantiates a new GenericResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewGenericResponseWithDefaults() *GenericResponse {
+	this := GenericResponse{}
+	return &this
+}
+
+// GetCode returns the Code field value if set, zero value otherwise.
+func (o *GenericResponse) GetCode() int32 {
+	if o == nil || isNil(o.Code) {
+		var ret int32
+		return ret
+	}
+	return *o.Code
+}
+
+// GetCodeOk returns a tuple with the Code field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GenericResponse) GetCodeOk() (*int32, bool) {
+	if o == nil || isNil(o.Code) {
+		return nil, false
+	}
+	return o.Code, true
+}
+
+// HasCode returns a boolean if a field has been set.
+func (o *GenericResponse) HasCode() bool {
+	if o != nil && !isNil(o.Code) {
+		return true
+	}
+
+	return false
+}
+
+// SetCode gets a reference to the given int32 and assigns it to the Code field.
+func (o *GenericResponse) SetCode(v int32) {
+	o.Code = &v
+}
+
+// GetMessage returns the Message field value if set, zero value otherwise.
+func (o *GenericResponse) GetMessage() string {
+	if o == nil || isNil(o.Message) {
+		var ret string
+		return ret
+	}
+	return *o.Message
+}
+
+// GetMessageOk returns a tuple with the Message field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GenericResponse) GetMessageOk() (*string, bool) {
+	if o == nil || isNil(o.Message) {
+		return nil, false
+	}
+	return o.Message, true
+}
+
+// HasMessage returns a boolean if a field has been set.
+func (o *GenericResponse) HasMessage() bool {
+	if o != nil && !isNil(o.Message) {
+		return true
+	}
+
+	return false
+}
+
+// SetMessage gets a reference to the given string and assigns it to the Message field.
+func (o *GenericResponse) SetMessage(v string) {
+	o.Message = &v
+}
+
+// GetResults returns the Results field value if set, zero value otherwise.
+func (o *GenericResponse) GetResults() string {
+	if o == nil || isNil(o.Results) {
+		var ret string
+		return ret
+	}
+	return *o.Results
+}
+
+// GetResultsOk returns a tuple with the Results field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *GenericResponse) GetResultsOk() (*string, bool) {
+	if o == nil || isNil(o.Results) {
+		return nil, false
+	}
+	return o.Results, true
+}
+
+// HasResults returns a boolean if a field has been set.
+func (o *GenericResponse) HasResults() bool {
+	if o != nil && !isNil(o.Results) {
+		return true
+	}
+
+	return false
+}
+
+// SetResults gets a reference to the given string and assigns it to the Results field.
+func (o *GenericResponse) SetResults(v string) {
+	o.Results = &v
+}
+
+func (o GenericResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o GenericResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !isNil(o.Code) {
+		toSerialize["code"] = o.Code
+	}
+	if !isNil(o.Message) {
+		toSerialize["message"] = o.Message
+	}
+	if !isNil(o.Results) {
+		toSerialize["results"] = o.Results
+	}
+	return toSerialize, nil
+}
+
+type NullableGenericResponse struct {
+	value *GenericResponse
+	isSet bool
+}
+
+func (v NullableGenericResponse) Get() *GenericResponse {
+	return v.value
+}
+
+func (v *NullableGenericResponse) Set(val *GenericResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableGenericResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableGenericResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableGenericResponse(val *GenericResponse) *NullableGenericResponse {
+	return &NullableGenericResponse{value: val, isSet: true}
+}
+
+func (v NullableGenericResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableGenericResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
