# model_login_response.go
@@ -1,0 +1,198 @@
+/*
+WhatsApp API MultiDevice
+
+This API is used for sending whatsapp via API
+
+API version: 3.3.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the LoginResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &LoginResponse{}
+
+// LoginResponse struct for LoginResponse
+type LoginResponse struct {
+	Code *string `json:"code,omitempty"`
+	Message *string `json:"message,omitempty"`
+	Results *LoginResponseResults `json:"results,omitempty"`
+}
+
+// NewLoginResponse instantiates a new LoginResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewLoginResponse() *LoginResponse {
+	this := LoginResponse{}
+	return &this
+}
+
+// NewLoginResponseWithDefaults instantiates a new LoginResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewLoginResponseWithDefaults() *LoginResponse {
+	this := LoginResponse{}
+	return &this
+}
+
+// GetCode returns the Code field value if set, zero value otherwise.
+func (o *LoginResponse) GetCode() string {
+	if o == nil || isNil(o.Code) {
+		var ret string
+		return ret
+	}
+	return *o.Code
+}
+
+// GetCodeOk returns a tuple with the Code field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *LoginResponse) GetCodeOk() (*string, bool) {
+	if o == nil || isNil(o.Code) {
+		return nil, false
+	}
+	return o.Code, true
+}
+
+// HasCode returns a boolean if a field has been set.
+func (o *LoginResponse) HasCode() bool {
+	if o != nil && !isNil(o.Code) {
+		return true
+	}
+
+	return false
+}
+
+// SetCode gets a reference to the given string and assigns it to the Code field.
+func (o *LoginResponse) SetCode(v string) {
+	o.Code = &v
+}
+
+// GetMessage returns the Message field value if set, zero value otherwise.
+func (o *LoginResponse) GetMessage() string {
+	if o == nil || isNil(o.Message) {
+		var ret string
+		return ret
+	}
+	return *o.Message
+}
+
+// GetMessageOk returns a tuple with the Message field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *LoginResponse) GetMessageOk() (*string, bool) {
+	if o == nil || isNil(o.Message) {
+		return nil, false
+	}
+	return o.Message, true
+}
+
+// HasMessage returns a boolean if a field has been set.
+func (o *LoginResponse) HasMessage() bool {
+	if o != nil && !isNil(o.Message) {
+		return true
+	}
+
+	return false
+}
+
+// SetMessage gets a reference to the given string and assigns it to the Message field.
+func (o *LoginResponse) SetMessage(v string) {
+	o.Message = &v
+}
+
+// GetResults returns the Results field value if set, zero value otherwise.
+func (o *LoginResponse) GetResults() LoginResponseResults {
+	if o == nil || isNil(o.Results) {
+		var ret LoginResponseResults
+		return ret
+	}
+	return *o.Results
+}
+
+// GetResultsOk returns a tuple with the Results field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *LoginResponse) GetResultsOk() (*LoginResponseResults, bool) {
+	if o == nil || isNil(o.Results) {
+		return nil, false
+	}
+	return o.Results, true
+}
+
+// HasResults returns a boolean if a field has been set.
+func (o *LoginResponse) HasResults() bool {
+	if o != nil && !isNil(o.Results) {
+		return true
+	}
+
+	return false
+}
+
+// SetResults gets a reference to the given LoginResponseResults and assigns it to the Results field.
+func (o *LoginResponse) SetResults(v LoginResponseResults) {
+	o.Results = &v
+}
+
+func (o LoginResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o LoginResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !isNil(o.Code) {
+		toSerialize["code"] = o.Code
+	}
+	if !isNil(o.Message) {
+		toSerialize["message"] = o.Message
+	}
+	if !isNil(o.Results) {
+		toSerialize["results"] = o.Results
+	}
+	return toSerialize, nil
+}
+
+type NullableLoginResponse struct {
+	value *LoginResponse
+	isSet bool
+}
+
+func (v NullableLoginResponse) Get() *LoginResponse {
+	return v.value
+}
+
+func (v *NullableLoginResponse) Set(val *LoginResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableLoginResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableLoginResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableLoginResponse(val *LoginResponse) *NullableLoginResponse {
+	return &NullableLoginResponse{value: val, isSet: true}
+}
+
+func (v NullableLoginResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableLoginResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
